--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
             <div class="icone">
                 <div>
                     <img src="./img/urso_menino2.png" alt="">
-                    <form action="processa.php" method="post">
+                    <form action="./processa.php" method="post">
                         <button type="submit" value="menino" name="button-processa" class="btn btn-primary menino">Arthur</button>
                     </form>
                 </div>
                 <div>
                     <img src="./img/ursa_menina2.png" alt="">
-                    <form action="processa.php" method="post">
+                    <form action="./processa.php" method="post">
                         <button type="submit" value="menina"  name="button-processa"class="btn btn-primary menina">Beatriz</button>
                     </form>
                 </div>
